--- a/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
-StaticMeshComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Direction,K2Node_VariableGet.DefaultValueCategory.Direction,K2Node_VariableSet.DefaultValueCategory.Direction
+StaticMeshComponent=
 ActorBP_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Direction,K2Node_VariableGet.DefaultValueCategory.Direction,K2Node_VariableSet.DefaultValueCategory.Direction
 SceneComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Direction,K2Node_VariableGet.DefaultValueCategory.Direction,K2Node_VariableSet.DefaultValueCategory.Direction
 PropertyWrapper=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.Direction,K2Node_VariableGet.DefaultValueCategory.Direction,K2Node_VariableSet.DefaultValueCategory.Direction
@@ -187,7 +187,7 @@ stena_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCate
 LastLevel=/Game/Untitled
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -642,7 +642,7 @@ ChangeVariableType_Warning=False
 [RootWindow]
 ScreenPosition=X=370.000 Y=457.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
